--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6230279977:AAFlFTWJMx2qxUw_bdoAeMCRUvXPWdUVxfo"
+BOT_TOKEN = "6200704408:AAG0uCuwF3Fe6xP-9CF-XLSXhejOhA5PEQ8"
 GDRIVE_FOLDER_ID = "0ADwxiLaZEP-1Uk9PVA"
 OWNER_ID = 1504797855
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -11,15 +11,15 @@ TELEGRAM_API = 13384432
 TELEGRAM_HASH = "ea9db4503ed7088b788e06dfd818e00e"
 
 # OPTIONAL CONFIG
-DATABASE_URL = "postgres://gphltlmp:AcwVuw62UoJtFzjczOw_VOtZdT4HL9wQ@rajje.db.elephantsql.com/gphltlmp"
-AUTHORIZED_CHATS = "-1001432933469"
-SUDO_USERS = ""
+DATABASE_URL = "postgres://qxciwzsi:jU8qT7Bzmjbeh2JzFLSRhsPjqsgGsToz@lallah.db.elephantsql.com/qxciwzsi"
+AUTHORIZED_CHATS = "-1001954219833 -1001732158894"
+SUDO_USERS = "1044163529"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://www.fundub.workers.dev/1:"
 STATUS_LIMIT = "3" #recommended value 2
 STOP_DUPLICATE = ""
-CMD_INDEX = "1"
+CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
