--- a/config.env
+++ b/config.env
@@ -142,7 +142,7 @@ TELEGRAPH_STYLE = ""     #Default is False
 CREDIT_NAME = "#TamilxPaid" 
 
 #DYNAMIC IMAGES
-PICS = ""               # Add multiple telgraph image links that are seperated by spaces
+PICS = "https://telegra.ph/file/596a95ed6939f7b196086.jpg"               # Add multiple telgraph image links that are seperated by spaces
 WALLFLARE_SEARCH = ""   # Put Keyword to Download Images from wallpaperflare.com, Seperate Multiple Words by + instead of space, eg: attack+on+titan
 WALLTIP_SEARCH = ""     # Put Keyword to Download Images from wallpapertip.com, Seperate Multiple Words by - instead of space, eg: attack-on-titan
 WALLCRAFT_CATEGORY = "" # Put Category Name, Available: 3D, abstract, animals, anime, art, black, cars, city, dark, fantasy, flowers, food, holidays, love, macro, minimalism, motorcycles, music, nature, others, milies, space, sport, technologies, textures, vector, words
