--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ SUDO_USERS = "1044163529"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://www.fundub.workers.dev/1:"
-STATUS_LIMIT = "3" #recommended value 2
+STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
@@ -116,13 +116,13 @@ KATDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 
 # Limits  
-TOTAL_TASKS_LIMIT = ""
-USER_TASKS_LIMIT = ""
+TOTAL_TASKS_LIMIT = "50"
+USER_TASKS_LIMIT = "50"
 STORAGE_THRESHOLD = ""
-TORRENT_DIRECT_LIMIT = ""
+TORRENT_DIRECT_LIMIT = "50"
 ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
-LEECH_LIMIT = ""
+LEECH_LIMIT = "50"
 MEGA_LIMIT = ""
 TIME_GAP = -1        
 
