--- a/config.env
+++ b/config.env
@@ -142,7 +142,7 @@ TELEGRAPH_STYLE = ""     #Default is False
 CREDIT_NAME = "#owner_of_qtmve" 
 
 #DYNAMIC IMAGES
-PICS = "https://telegra.ph/file/596a95ed6939f7b196086.jpg"               # Add multiple telgraph image links that are seperated by spaces
+PICS = "https://telegra.ph/file/dabdaa1fc0810483ee7ba.jpg"               # Add multiple telgraph image links that are seperated by spaces
 WALLFLARE_SEARCH = ""   # Put Keyword to Download Images from wallpaperflare.com, Seperate Multiple Words by + instead of space, eg: attack+on+titan
 WALLTIP_SEARCH = ""     # Put Keyword to Download Images from wallpapertip.com, Seperate Multiple Words by - instead of space, eg: attack-on-titan
 WALLCRAFT_CATEGORY = "" # Put Category Name, Available: 3D, abstract, animals, anime, art, black, cars, city, dark, fantasy, flowers, food, holidays, love, macro, minimalism, motorcycles, music, nature, others, milies, space, sport, technologies, textures, vector, words
@@ -152,7 +152,7 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = "code"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "i"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
