--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
 AUTHORIZED_CHATS = "-1001954219833 -1001732158894 -1001885675538"
-SUDO_USERS = "1044163529"
+SUDO_USERS = "1044163529 885675538"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://www.fundub.workers.dev/1:"
