--- a/config.env
+++ b/config.env
@@ -12,11 +12,11 @@ TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
-AUTHORIZED_CHATS = "-1001954219833 -1001732158894 -1001885675538"
-SUDO_USERS = "1044163529 885675538"
+AUTHORIZED_CHATS = "-1001954219833 -1001732158894 "
+SUDO_USERS = "1044163529 "
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
-INDEX_URL = "https://www.fundub.workers.dev/1:"
+INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
 STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
@@ -118,9 +118,9 @@ DRIVEFIRE_CRYPT = ""
 # Limits  
 TOTAL_TASKS_LIMIT = "50"
 USER_TASKS_LIMIT = "50"
-STORAGE_THRESHOLD = ""
+STORAGE_THRESHOLD = "50"
 TORRENT_DIRECT_LIMIT = "50"
-ZIP_UNZIP_LIMIT = ""
+ZIP_UNZIP_LIMIT = "50"
 CLONE_LIMIT = ""
 LEECH_LIMIT = "50"
 MEGA_LIMIT = ""
@@ -128,8 +128,8 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '▪' # '●'  '■'
-UN_FINISHED_PROGRESS_STR = '▫' # '○'  '□'
+FINISHED_PROGRESS_STR = '🟥' # '🟧'  '🟨'
+UN_FINISHED_PROGRESS_STR = '🔔' # '🔇'  '🟩'
 
 # THEME
 EMOJI_THEME = ""      #Default is False
@@ -139,7 +139,7 @@ SHOW_LIMITS_IN_STATS = ""   #Default is false
 TELEGRAPH_STYLE = ""     #Default is False
 
 #BRANDING
-CREDIT_NAME = "#owner_of_qtmve" 
+CREDIT_NAME = "#QTVS_BOT-CLOUD" 
 
 #DYNAMIC IMAGES
 PICS = "https://telegra.ph/file/dabdaa1fc0810483ee7ba.jpg"               # Add multiple telgraph image links that are seperated by spaces
@@ -152,7 +152,7 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = "i"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "code"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
