--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
 AUTHORIZED_CHATS = "-1001954219833 -1001732158894 "
-SUDO_USERS = "1044163529 "
+SUDO_USERS = "732158894"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -41,7 +41,7 @@ UPSTREAM_BRANCH = "update"
 
 #PM SUPPORT
 BOT_PM = "true"
-FORCE_BOT_PM = ""   #For this the BOT_PM must be True 
+FORCE_BOT_PM = "true"   #For this the BOT_PM must be True 
 
 # Leech
 LEECH_LOG = -1001929546156
@@ -128,12 +128,11 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '🟥' # '🟧'  '🟨'
-UN_FINISHED_PROGRESS_STR = '🔔' # '🔇'  '🟩'
-
+FINISHED_PROGRESS_STR = '♻️' # '🟧'  '🟨'
+UN_FINISHED_PROGRESS_STR = '♾️' # '🔇'  '🟩'
 # THEME
-EMOJI_THEME = ""      #Default is False
-SHOW_LIMITS_IN_STATS = ""   #Default is false 
+EMOJI_THEME = "true"      #Default is False
+SHOW_LIMITS_IN_STATS = "20"   #Default is false 
 
 #VIEW STYLE
 TELEGRAPH_STYLE = ""     #Default is False
