--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # REQUIRED CONFIG
 BOT_TOKEN = "6312868738:AAGSTXsCphKnppgW5GU7rbyK2xfDXk-S-II"
-GDRIVE_FOLDER_ID = "0ADwxiLaZEP-1Uk9PVA"
-OWNER_ID = 1044163529
+GDRIVE_FOLDER_ID = "1Hl0G0Oc0dQsSW7JpTqk1U1yVX_f1qFLK"
+OWNER_ID = 1044163529 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
@@ -12,8 +12,8 @@ TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
-AUTHORIZED_CHATS = "-1001954219833 -1001732158894 "
-SUDO_USERS = "732158894"
+AUTHORIZED_CHATS = "-1001954219833 -10011044163529 "
+SUDO_USERS = "1044163529"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -27,9 +27,9 @@ INCOMPLETE_TASK_NOTIFIER = ""
 
 #TURN ON/OFF FUCTIONS
 LEECH_ENABLED = "true"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-MIRROR_ENABLED = "true"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+MIRROR_ENABLED = "false"             #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WATCH_ENABLED = "true"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
-CLONE_ENABLED = "true"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
+CLONE_ENABLED = "false"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = "true"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = "true"            #Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = "true"          #Default is False (only use by owner/sudo) Make it True (for authorized chats)
@@ -128,11 +128,11 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '♻️' # '🟧'  '🟨'
-UN_FINISHED_PROGRESS_STR = '♾️' # '🔇'  '🟩'
+FINISHED_PROGRESS_STR = '⚡' # '🔥'  '🌟'
+UN_FINISHED_PROGRESS_STR = '❄' # '💥'  '💧'
 # THEME
-EMOJI_THEME = "true"      #Default is False
-SHOW_LIMITS_IN_STATS = "20"   #Default is false 
+EMOJI_THEME = ""      #Default is False
+SHOW_LIMITS_IN_STATS = ""   #Default is false 
 
 #VIEW STYLE
 TELEGRAPH_STYLE = ""     #Default is False
@@ -151,14 +151,14 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = "code"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "b"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
 VIEW_LINK = "True"
-SOURCE_LINK = "False"
+SOURCE_LINK = "True"
 START_BTN1_NAME = "Hero 🕺"
 START_BTN1_URL = "t.me/Owner_of_qtmve"
 START_BTN2_NAME = "update"
