--- a/config.env
+++ b/config.env
@@ -44,14 +44,14 @@ BOT_PM = "true"
 FORCE_BOT_PM = "true"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = -1001929546156
-LEECH_LOG_URL = "https://t.me/+9WpvP2SGrUllOWVl"
-LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
-PAID_SERVICE = ""     # Default is False
+LEECH_LOG = -1001962724912
+LEECH_LOG_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
+LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech file indexing in leech log channel
+PAID_SERVICE = "true"     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001755629335
-MIRROR_LOG_URL = "https://t.me/+D1aa45SBE0o5NWQ1"
+MIRROR_LOGS = -1001962724912
+MIRROR_LOG_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
 LINK_LOGS = 
 
 #Other
