--- a/config.env
+++ b/config.env
@@ -1,19 +1,19 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6312868738:AAGSTXsCphKnppgW5GU7rbyK2xfDXk-S-II"
+BOT_TOKEN = "6343799398:AAFyoBn3BWECiiqI8Mh75v4xHkAfwFU8ToA"
 GDRIVE_FOLDER_ID = "1Hl0G0Oc0dQsSW7JpTqk1U1yVX_f1qFLK"
-OWNER_ID = 1044163529 
+OWNER_ID = 1915249415 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
 IS_TEAM_DRIVE = "true"
-TELEGRAM_API = 11427887
-TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
+TELEGRAM_API = 22933611
+TELEGRAM_HASH = "4621a8ef8462b1e43a20532039bdf479"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
-AUTHORIZED_CHATS = "-1001954219833 -10011044163529 "
-SUDO_USERS = "1044163529"
+AUTHORIZED_CHATS = "-10011915249415 -1001885675538 "
+SUDO_USERS = "1915249415"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -62,8 +62,8 @@ TIMEZONE = "Asia/Kolkata"
 
 #Telegraph UI
 TITLE_NAME = "#QTVS_BOT_X_CLOUD"
-AUTHOR_NAME = "#owner_of_qtmve"
-AUTHOR_URL = "https://telegram.dog/Owner_of_qtmve"
+AUTHOR_NAME = "#Tamayo5"
+AUTHOR_URL = "https://telegram.dog/Tamayo5"
 GD_INFO = "Uploaded By #QTVS_BOT_X_CLOUD"
 
 # Force Sub Channel
@@ -160,11 +160,11 @@ DISABLE_DRIVE_LINK = ""
 VIEW_LINK = "True"
 SOURCE_LINK = "True"
 START_BTN1_NAME = "Hero 🕺"
-START_BTN1_URL = "t.me/Owner_of_qtmve"
+START_BTN1_URL = "t.me/Tamayo5"
 START_BTN2_NAME = "update"
 START_BTN2_URL = "https://t.me/QTVS_BOT_X_CLOUD"
 BUTTON_FOUR_NAME = "Log Channel"
-BUTTON_FOUR_URL = "https://t.me/+9WpvP2SGrUllOWVl"
+BUTTON_FOUR_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
 BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
 BUTTON_SIX_NAME = ""
