--- a/config.env
+++ b/config.env
@@ -13,7 +13,7 @@ TELEGRAM_HASH = "4621a8ef8462b1e43a20532039bdf479"
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
 AUTHORIZED_CHATS = "-10011915249415 -1001885675538 "
-SUDO_USERS = "1915249415"
+SUDO_USERS = "1915249415 885675538"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -44,14 +44,14 @@ BOT_PM = "true"
 FORCE_BOT_PM = "true"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = -1001962724912
-LEECH_LOG_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
+LEECH_LOG = -1001755629335
+LEECH_LOG_URL = "https://t.me/+9WpvP2SGrUllOWVl"
 LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = "true"     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001962724912
-MIRROR_LOG_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
+MIRROR_LOGS = --1001755629335
+MIRROR_LOG_URL = "https://t.me/+D1aa45SBE0o5NWQ1"
 LINK_LOGS = 
 
 #Other
@@ -62,8 +62,8 @@ TIMEZONE = "Asia/Kolkata"
 
 #Telegraph UI
 TITLE_NAME = "#QTVS_BOT_X_CLOUD"
-AUTHOR_NAME = "#Tamayo5"
-AUTHOR_URL = "https://telegram.dog/Tamayo5"
+AUTHOR_NAME = "#SMD_Owner"
+AUTHOR_URL = "https://telegram.dog/SMD_Owner"
 GD_INFO = "Uploaded By #QTVS_BOT_X_CLOUD"
 
 # Force Sub Channel
@@ -159,9 +159,9 @@ CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b
 DISABLE_DRIVE_LINK = "" 
 VIEW_LINK = "True"
 SOURCE_LINK = "True"
-START_BTN1_NAME = "Hero 🕺"
-START_BTN1_URL = "t.me/Tamayo5"
-START_BTN2_NAME = "update"
+START_BTN1_NAME = " 🎋Author"
+START_BTN1_URL = "t.me/SMD_Owner"
+START_BTN2_NAME = "🔥Update"
 START_BTN2_URL = "https://t.me/QTVS_BOT_X_CLOUD"
 BUTTON_FOUR_NAME = "Log Channel"
 BUTTON_FOUR_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
