--- a/config.env
+++ b/config.env
@@ -50,7 +50,7 @@ LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech fi
 PAID_SERVICE = "true"     # Default is False
 
 #Mirror
-MIRROR_LOGS = --1001755629335
+MIRROR_LOGS = -1001755629335
 MIRROR_LOG_URL = "https://t.me/+D1aa45SBE0o5NWQ1"
 LINK_LOGS = 
 
