--- a/config.env
+++ b/config.env
@@ -1,5 +1,5 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6343799398:AAFyoBn3BWECiiqI8Mh75v4xHkAfwFU8ToA"
+BOT_TOKEN = "6312868738:AAEXeZ3RP6NAeOz3UDuEoN5zXM1KmJp_c9g"
 GDRIVE_FOLDER_ID = "1Hl0G0Oc0dQsSW7JpTqk1U1yVX_f1qFLK"
 OWNER_ID = 1915249415 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
@@ -7,13 +7,13 @@ DOWNLOAD_STATUS_UPDATE_INTERVAL = 20
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
 IS_TEAM_DRIVE = "true"
-TELEGRAM_API = 22933611
-TELEGRAM_HASH = "4621a8ef8462b1e43a20532039bdf479"
+TELEGRAM_API = 11427887
+TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
-AUTHORIZED_CHATS = "-10011915249415 -1001885675538 "
-SUDO_USERS = "1915249415 885675538"
+AUTHORIZED_CHATS = "-10011044163529 -1001885675538 "
+SUDO_USERS = "1044163529 885675538"
 IGNORE_PENDING_REQUESTS = ""
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -44,14 +44,14 @@ BOT_PM = "true"
 FORCE_BOT_PM = "true"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = -1001755629335
-LEECH_LOG_URL = "https://t.me/+9WpvP2SGrUllOWVl"
+LEECH_LOG = -1001929024301
+LEECH_LOG_URL = "https://t.me/+vWUElq4D_YI5ZTg1"
 LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech file indexing in leech log channel
-PAID_SERVICE = "true"     # Default is False
+PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001755629335
-MIRROR_LOG_URL = "https://t.me/+D1aa45SBE0o5NWQ1"
+MIRROR_LOGS = 
+MIRROR_LOG_URL = ""
 LINK_LOGS = 
 
 #Other
@@ -67,9 +67,9 @@ AUTHOR_URL = "https://telegram.dog/SMD_Owner"
 GD_INFO = "Uploaded By #QTVS_BOT_X_CLOUD"
 
 # Force Sub Channel
-FSUB = ""
-CHANNEL_USERNAME = ""
-FSUB_CHANNEL_ID =
+FSUB = "true"
+CHANNEL_USERNAME = "https://t.me/+-wwvNNyPIUo3OWU1"
+FSUB_CHANNEL_ID = "-1001870367610"
 
 # qBittorrent
 BASE_URL_OF_BOT = ""
@@ -116,20 +116,20 @@ KATDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 
 # Limits  
-TOTAL_TASKS_LIMIT = "50"
-USER_TASKS_LIMIT = "50"
-STORAGE_THRESHOLD = "50"
-TORRENT_DIRECT_LIMIT = "50"
-ZIP_UNZIP_LIMIT = "50"
+TOTAL_TASKS_LIMIT = "20"
+USER_TASKS_LIMIT = "3"
+STORAGE_THRESHOLD = ""
+TORRENT_DIRECT_LIMIT = "20"
+ZIP_UNZIP_LIMIT = "20"
 CLONE_LIMIT = ""
-LEECH_LIMIT = "50"
+LEECH_LIMIT = "20"
 MEGA_LIMIT = ""
 TIME_GAP = -1        
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '⚡' # '🔥'  '🌟'
-UN_FINISHED_PROGRESS_STR = '❄' # '💥'  '💧'
+FINISHED_PROGRESS_STR = '🔘' # '🟠'  '🌟'
+UN_FINISHED_PROGRESS_STR = '🔳' # '🔲'  '💧'
 # THEME
 EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
@@ -158,7 +158,7 @@ CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b
 # Buttons
 DISABLE_DRIVE_LINK = "" 
 VIEW_LINK = "True"
-SOURCE_LINK = "True"
+SOURCE_LINK = "False"
 START_BTN1_NAME = " 🎋Author"
 START_BTN1_URL = "t.me/SMD_Owner"
 START_BTN2_NAME = "🔥Update"
