--- a/config.env
+++ b/config.env
@@ -128,8 +128,8 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '🔘' # '🟠'  '🌟'
-UN_FINISHED_PROGRESS_STR = '🔳' # '🔲'  '💧'
+FINISHED_PROGRESS_STR = '⋆' # '🟠'  '🌟'
+UN_FINISHED_PROGRESS_STR = '❂' # '🔲'  '💧'
 # THEME
 EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
@@ -157,8 +157,8 @@ CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b
 
 # Buttons
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = "True"
-SOURCE_LINK = "False"
+VIEW_LINK = "true"
+SOURCE_LINK = "false"
 START_BTN1_NAME = " 🎋Author"
 START_BTN1_URL = "t.me/SMD_Owner"
 START_BTN2_NAME = "🔥Update"
