--- a/config.env
+++ b/config.env
@@ -14,7 +14,7 @@ TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
 AUTHORIZED_CHATS = "-10011044163529 -1001885675538 "
 SUDO_USERS = "1044163529 885675538"
-IGNORE_PENDING_REQUESTS = ""
+IGNORE_PENDING_REQUESTS = "true"
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
 STATUS_LIMIT = "2" #recommended value 2
@@ -23,7 +23,7 @@ CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
 TORRENT_TIMEOUT = ""
 EXTENSION_FILTER = ""
-INCOMPLETE_TASK_NOTIFIER = ""
+INCOMPLETE_TASK_NOTIFIER = "true"
 
 #TURN ON/OFF FUCTIONS
 LEECH_ENABLED = "true"              #Default is False (only use by owner/sudo) Make it True (for authorized chats)
@@ -46,12 +46,12 @@ FORCE_BOT_PM = "true"   #For this the BOT_PM must be True
 # Leech
 LEECH_LOG = -1001929024301
 LEECH_LOG_URL = "https://t.me/+vWUElq4D_YI5ZTg1"
-LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech file indexing in leech log channel
+LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = 
-MIRROR_LOG_URL = ""
+MIRROR_LOGS = -1001929024301
+MIRROR_LOG_URL = "https://t.me/+vWUElq4D_YI5ZTg1"
 LINK_LOGS = 
 
 #Other
@@ -68,7 +68,7 @@ GD_INFO = "Uploaded By #QTVS_BOT_X_CLOUD"
 
 # Force Sub Channel
 FSUB = "true"
-CHANNEL_USERNAME = "https://t.me/+-wwvNNyPIUo3OWU1"
+CHANNEL_USERNAME = "#QTVS_BOT_X_CLOUD"
 FSUB_CHANNEL_ID = "-1001870367610"
 
 # qBittorrent
@@ -135,7 +135,7 @@ EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
 
 #VIEW STYLE
-TELEGRAPH_STYLE = ""     #Default is False
+TELEGRAPH_STYLE = "true"     #Default is False
 
 #BRANDING
 CREDIT_NAME = "#QTVS_BOT-CLOUD" 
@@ -151,7 +151,7 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = "b"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "code"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
@@ -164,9 +164,9 @@ START_BTN1_URL = "t.me/SMD_Owner"
 START_BTN2_NAME = "🔥Update"
 START_BTN2_URL = "https://t.me/QTVS_BOT_X_CLOUD"
 BUTTON_FOUR_NAME = "Log Channel"
-BUTTON_FOUR_URL = "https://t.me/+-O9aoW-g3lJkNjk9"
-BUTTON_FIVE_NAME = ""
-BUTTON_FIVE_URL = ""
+BUTTON_FOUR_URL = "https://https://t.me/+vWUElq4D_YI5ZTg1"
+BUTTON_FIVE_NAME = "Bot updates"
+BUTTON_FIVE_URL = "https://t.me/QTVS_BOT_X_CLOUD"
 BUTTON_SIX_NAME = ""
 BUTTON_SIX_URL = ""
 
