--- a/config.env
+++ b/config.env
@@ -128,8 +128,8 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '🧊' # '🍹'  '🌟'
-UN_FINISHED_PROGRESS_STR = '🥃' # '🍺'  '💧'
+FINISHED_PROGRESS_STR = '🪅*' # '🗝'  '🌟'
+UN_FINISHED_PROGRESS_STR = '*🪄' # '🪄'  '💧'
 # THEME
 EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
