--- a/config.env
+++ b/config.env
@@ -151,7 +151,7 @@ PIXABAY_SEARCH = ""     # Put Keyword to Download Images from Pixabay.com Limit 
 
 
 #FONT STYLE
-NAME_FONT = "code"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
+NAME_FONT = "b"        # Default Name of File on Upload message, Available Options : b, code, i, u, strike, spoiler
 CAPTION_FONT = "b"     # Default Caption of Leeched files, Available Options : b, code, i, u, strike, spoiler
 
 
