--- a/config.env
+++ b/config.env
@@ -17,7 +17,7 @@ SUDO_USERS = "1044163529 885675538"
 IGNORE_PENDING_REQUESTS = "true"
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
-STATUS_LIMIT = "3" #recommended value 2
+STATUS_LIMIT = "2" #recommended value 2
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
@@ -128,8 +128,8 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '🪅*' # '🗝'  '🌟'
-UN_FINISHED_PROGRESS_STR = '*🪄' # '🪄'  '💧'
+FINISHED_PROGRESS_STR = '💖' # '🗝'  '🌟'
+UN_FINISHED_PROGRESS_STR = '💔' # '🪄'  '💧'
 # THEME
 EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
