--- a/config.env
+++ b/config.env
@@ -1,19 +1,19 @@
 # REQUIRED CONFIG
-BOT_TOKEN = "6312868738:AAEXeZ3RP6NAeOz3UDuEoN5zXM1KmJp_c9g"
+BOT_TOKEN = "6487855022:AAEmYdICCi_aJRWZKI3t5DwF8_Z5TMAICis"
 GDRIVE_FOLDER_ID = "1Hl0G0Oc0dQsSW7JpTqk1U1yVX_f1qFLK"
-OWNER_ID = 1915249415 
+OWNER_ID = 6176298049 
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 50
 AUTO_DELETE_MESSAGE_DURATION = 60       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
 IS_TEAM_DRIVE = "false"
-TELEGRAM_API = 11427887
-TELEGRAM_HASH = "317ea7bfc3dcbfb2a4aa7c866110074e"
+TELEGRAM_API = 27204651
+TELEGRAM_HASH = "f16a3248741e877e483b8fb883dacf09"
 
 # OPTIONAL CONFIG
 DATABASE_URL = "postgres://zneoxmjz:xBB08b8j7rMkw7c06u6vu3hCdtr7RkUW@stampy.db.elephantsql.com/zneoxmjz"
-AUTHORIZED_CHATS = "-10011044163529 -1001885675538 "
-SUDO_USERS = "1044163529 885675538"
+AUTHORIZED_CHATS = "-10016176298049 -1001885675538 "
+SUDO_USERS = "6176298049 885675538"
 IGNORE_PENDING_REQUESTS = "true"
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
@@ -44,14 +44,14 @@ BOT_PM = "true"
 FORCE_BOT_PM = "true"   #For this the BOT_PM must be True 
 
 # Leech
-LEECH_LOG = -1001929024301
-LEECH_LOG_URL = "https://t.me/+vWUElq4D_YI5ZTg1"
+LEECH_LOG = -1001729340373
+LEECH_LOG_URL = "https://t.me/+MqeppX1b6us3MWZk"
 LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
 PAID_SERVICE = ""     # Default is False
 
 #Mirror
-MIRROR_LOGS = -1001929024301
-MIRROR_LOG_URL = "https://t.me/+vWUElq4D_YI5ZTg1"
+MIRROR_LOGS = -1001729340373
+MIRROR_LOG_URL = "https://t.me/+MqeppX1b6us3MWZk"
 LINK_LOGS = 
 
 #Other
@@ -128,8 +128,8 @@ TIME_GAP = -1
 
 
 # Progress Strings
-FINISHED_PROGRESS_STR = '💖' # '🗝'  '🌟'
-UN_FINISHED_PROGRESS_STR = '💔' # '🪄'  '💧'
+FINISHED_PROGRESS_STR = '💮' # '🗝'  '🌟'
+UN_FINISHED_PROGRESS_STR = '✳️' # '🪄'  '💧'
 # THEME
 EMOJI_THEME = ""      #Default is False
 SHOW_LIMITS_IN_STATS = ""   #Default is false 
@@ -141,7 +141,7 @@ TELEGRAPH_STYLE = "true"     #Default is False
 CREDIT_NAME = "#QTVS_BOT-CLOUD" 
 
 #DYNAMIC IMAGES
-PICS = "https://telegra.ph/file/dabdaa1fc0810483ee7ba.jpg"               # Add multiple telgraph image links that are seperated by spaces
+PICS = "https://telegra.ph/file/-6197294816790951030_120.jpg"               # Add multiple telgraph image links that are seperated by spaces
 WALLFLARE_SEARCH = ""   # Put Keyword to Download Images from wallpaperflare.com, Seperate Multiple Words by + instead of space, eg: attack+on+titan
 WALLTIP_SEARCH = ""     # Put Keyword to Download Images from wallpapertip.com, Seperate Multiple Words by - instead of space, eg: attack-on-titan
 WALLCRAFT_CATEGORY = "" # Put Category Name, Available: 3D, abstract, animals, anime, art, black, cars, city, dark, fantasy, flowers, food, holidays, love, macro, minimalism, motorcycles, music, nature, others, milies, space, sport, technologies, textures, vector, words
