--- a/config.env
+++ b/config.env
@@ -46,8 +46,8 @@ FORCE_BOT_PM = "true"   #For this the BOT_PM must be True
 # Leech
 LEECH_LOG = -1001729340373
 LEECH_LOG_URL = "https://t.me/+MqeppX1b6us3MWZk"
-LEECH_LOG_INDEXING = ""  #Default is False make it True if you want leech file indexing in leech log channel
-PAID_SERVICE = ""     # Default is False
+LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech file indexing in leech log channel
+PAID_SERVICE = "true"     # Default is False
 
 #Mirror
 MIRROR_LOGS = -1001729340373
@@ -117,7 +117,7 @@ DRIVEFIRE_CRYPT = ""
 
 # Limits  
 TOTAL_TASKS_LIMIT = "50"
-USER_TASKS_LIMIT = "3"
+USER_TASKS_LIMIT = "50"
 STORAGE_THRESHOLD = ""
 TORRENT_DIRECT_LIMIT = "50"
 ZIP_UNZIP_LIMIT = "50"
@@ -192,7 +192,7 @@ SEARCH_PLUGINS = '["https://raw.githubusercontent.com/qbittorrent/search-plugins
 
 
 #Mirror Related Commands
-START_COMMAND = ""      #Default is "start"
+START_COMMAND = "start1"      #Default is "start"
 MIRROR_COMMAND = ""     #Default is "mirror"
 ZIP_COMMAND = ""        #Default is "zipmirror"
 UNZIP_COMMAND = ""      #Default is "unzipmirror"
