--- a/config.env
+++ b/config.env
@@ -5,7 +5,7 @@ OWNER_ID = 6176298049
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 50
 AUTO_DELETE_MESSAGE_DURATION = 60       
-AUTO_DELETE_UPLOAD_MESSAGE_DURATION = -1  #minimum recommended 120
+AUTO_DELETE_UPLOAD_MESSAGE_DURATION = 60  #minimum recommended 120
 IS_TEAM_DRIVE = "false"
 TELEGRAM_API = 27204651
 TELEGRAM_HASH = "f16a3248741e877e483b8fb883dacf09"
@@ -17,7 +17,7 @@ SUDO_USERS = "6176298049 885675538"
 IGNORE_PENDING_REQUESTS = "true"
 USE_SERVICE_ACCOUNTS = "true"
 INDEX_URL = "https://qtmvexsmdmirror.smdleechxcloud.workers.dev/:"
-STATUS_LIMIT = "2" #recommended value 2
+STATUS_LIMIT = "" #recommended value 2
 STOP_DUPLICATE = ""
 CMD_INDEX = ""
 UPTOBOX_TOKEN = ""
@@ -50,8 +50,8 @@ LEECH_LOG_INDEXING = "true"  #Default is False make it True if you want leech fi
 PAID_SERVICE = "true"     # Default is False
 
 #Mirror
-MIRROR_LOGS = 
-MIRROR_LOG_URL = ""
+MIRROR_LOGS = -1001929546156
+MIRROR_LOG_URL = "https://t.me/+9WpvP2SGrUllOWVl"
 LINK_LOGS = 
 
 #Other
@@ -67,7 +67,7 @@ AUTHOR_URL = "https://telegram.dog/SMD_Owner"
 GD_INFO = "Uploaded By #QTVS_BOT_X_CLOUD"
 
 # Force Sub Channel
-FSUB = "true"
+FSUB = ""
 CHANNEL_USERNAME = ""
 FSUB_CHANNEL_ID = ""
 
@@ -116,13 +116,13 @@ KATDRIVE_CRYPT = ""
 DRIVEFIRE_CRYPT = ""
 
 # Limits  
-TOTAL_TASKS_LIMIT = "50"
-USER_TASKS_LIMIT = "50"
+TOTAL_TASKS_LIMIT = "10"
+USER_TASKS_LIMIT = "10"
 STORAGE_THRESHOLD = ""
-TORRENT_DIRECT_LIMIT = "50"
-ZIP_UNZIP_LIMIT = "50"
+TORRENT_DIRECT_LIMIT = ""
+ZIP_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""
-LEECH_LIMIT = "50"
+LEECH_LIMIT = "10"
 MEGA_LIMIT = ""
 TIME_GAP = -1        
 
